# Software-Rasterizer

./: CMakeLists.txt  FindSDL.cmake  README.md  camera.h  clipper.cc  clipper.h  input.cc  input.h  main.cc  main.cpp  mat.h  math.h  maths.h  obj.cc  obj.h  primitives.cc  primitives.h  renderer.cc  renderer.h  shaders.h  texture.cc  texture.h  timer.h  vec.cpp  vec.h
examples/: CMakeLists.txt  depth.cc  parallax.cc  shadingModels.cc
src/: CMakeLists.txt  camera.h  clipper.cc  clipper.h  input.cc  input.h  obj.cc  obj.h  primitives.cc  primitives.h  renderer.cc  renderer.h  shaders.h  softy.h  texture.cc  texture.h  timer.h
